--- a/Trains.csproj
+++ b/Trains.csproj
@@ -13,9 +13,17 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazor.Heroicons" Version="2.1.5" />
       <PackageReference Include="bunit" Version="2.0.33-preview" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
       <PackageReference Include="xunit" Version="2.9.2" />
+      <PackageReference Include="Xunit.DependencyInjection" Version="9.5.0" />
     </ItemGroup>
 
 </Project>
