--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "RoutesDB": "Data Source=database.sqlite"
+  },
   "DetailedErrors": true
 }
